<resources>
    <string name="app_name">CamFood</string>
    <string name="splash_screen_sub_text">Eating food on campus has never been easier…</string>
    <string name="app_title">Cam Food</string>
    <string name="register_customer_button_text">Register As customer</string>
    <string name="register_restaurant_button_text">Register As Restaurant</string>
    <string name="home_activity_title">Home</string>
    <string name="empty_view_message">No food item</string>
    <string name="naira">₦</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="login_description">if you already have an Account</string>
    <string name="sign_up_button_label">Sign up</string>
    <string name="address_edit_text_label">Address</string>
    <string name="phone_number_edit_text_label">Phone number</string>
    <string name="username_edit_text_label">Full Name</string>
    <string name="status_accepted">ACCEPTED</string>
    <string name="status_declined">DECLINED</string>
    <string name="status_delivered">DELIVERED</string>
    <string name="status_processing">PROCESSING</string>
    <string name="button_approve_text">Mark as done</string>
    <string name="status_created">CREATED</string>
    <string name="order_created_status_detail">Order Created</string>
    <string name="order_accepted_status_detail">Order Accepted</string>
    <string name="order_declined_status_detail">Order Declined by Restaurant</string>
    <string name="order_delievered_status_detail">Order delivered By Restaurant</string>
    <string name="order_processed_status_detail">Order is being processed</string>
    <string name="order_finished_status_detail">Order completed</string>
    <string name="status_finished">COMPLETED</string>
    <string name="create_food_title">Create Food</string>
    <string name="customer_sign_up_title">Customer Registration</string>
    <string name="restaurant_sign_up_title">Restaurant Registration</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="save_text">SAVE</string>
    <string name="delete_text">DELETE</string>
    <string name="cancel_text">CANCEL</string>
    <string name="start_processing_text">Start Processing</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="empty_food_name_error">Food name cannot be empty</string>
    <string name="empty_topping_error">Kindly add one more or topping</string>
    <string name="empty_food_price_error">Food Price cannot be empty</string>
    <string name="empty_food_completion_time_error">Food time to Completion cannot be empty</string>
    <string name="food_sucessfully_added">Food Successfully added</string>
    <string name="account_balance_label">Account Balance</string>
    <string name="fund_wallet_button_title">Fund Wallet</string>
    <string name="amount">Amount</string>
    <string name="fund_wallet">Fund wallet</string>
    <string name="withdraw_fund">WITHDRAW FUND</string>
    <string name="fund_wallet_sucess">Account Successfully Funded</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="withdraw_success">Successfully Withdrawal</string>
    <string name="camfood_channel_description">This shows camfood notification</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string-array name="pick_up_locations">
        <item>Please select a pick up Location</item>
        <item>Awolowo Hall Common Room</item>
        <item>Angola Hall Common Room</item>
        <item>Mozambique Hall Common Room</item>
        <item>Akintola Hall Common Room</item>
        <item>Eat At Restaurant</item>
        <item>Motion Ground</item>
    </string-array>
    <string-array name="restaurant_type">
        <item>Please select restaurant type</item>
        <item>Iya Alamala</item>
        <item>Small  Size Restaurant</item>
        <item>Fast food joint</item>
        <item>Five star Restaurant</item>
        <item>No star restaurant</item>
    </string-array>
</resources>
