<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_space_margin"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/ic_name"
            android:drawablePadding="@dimen/card_container_margin"
            android:hint="@string/username_edit_text_label"
            android:padding="@dimen/edit_text_padding" />
        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_space_margin"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/card_container_margin"
            android:hint="@string/phone_number_edit_text_label"
            android:inputType="phone"
            android:padding="@dimen/edit_text_padding" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_space_margin"
            android:background="@drawable/edit_text_box"
            android:drawableLeft="@drawable/ic_address"
            android:drawablePadding="@dimen/card_container_margin"
            android:hint="@string/address_edit_text_label"
            android:padding="@dimen/edit_text_padding" />

        <Button
            android:id="@+id/btn_update_profile"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/big_space_margin"
            android:background="@color/colorAccent"
            android:text="@string/update_profile"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>