<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:tint="#c04fc3f7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/app_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_customer_register"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginTop="60dp"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@drawable/welcome_button_background"
            android:text="@string/register_customer_button_text"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_restaurant_register"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/welcome_button_background"
            android:text="@string/register_restaurant_button_text"
            android:textColor="@color/colorWhite" />
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/container_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/login_description"
                android:layout_width="wrap_content"
                android:padding="4dp"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content" />
            <TextView
                android:text="Login"
                android:id="@+id/tv_login_span"
                android:padding="4dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_skip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Skip Registration"
            android:textColor="@color/colorWhite" />/>
    </LinearLayout>


</RelativeLayout>